src/main/java/com/example/fas/exceptions/user/error/HadUserRoleAdminException.java
package com.example.fas.exceptions.user.error;

public class HadUserRoleAdminException extends RuntimeException {
    public HadUserRoleAdminException(String message) {
        super(message);
    }
}
